[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/Inventory/CenterDot.png" type="Texture" id=3]
[ext_resource path="res://Scripts/ItemDisplay.gd" type="Script" id=4]

[node name="ItemDisplay" type="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -4.5
margin_right = 56.0
margin_bottom = 4.5
rect_min_size = Vector2( 120, 10 )
size_flags_horizontal = 4
size_flags_vertical = 5
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QualityTiersHolder" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -4.5
margin_bottom = 4.5
rect_min_size = Vector2( 108, 9 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 7.0
margin_top = 8.0
margin_right = 105.0
margin_bottom = 9.0
color = Color( 0.454902, 0.670588, 0.376471, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 4, 0 )

[node name="DotSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
